# desktop-common-data

./: .cvsignore  .gitignore  ChangeLog  Makefile  README  README.CVS  TRANSLATORS  desktop-common-data.spec  gtkrc  mandrake-small.xpm  mandrake_desk.spec  window-managers  xml-i18n-update.in
desktop/: Donate.desktop  Join.desktop  buyit.desktop.in  donate.desktop  join.desktop  subscribe.desktop.in  tribute.desktop
dm/: GdmGreeterTheme.desktop  KdmGreeterTheme.desktop  mdk-gdm-nolist.xml  mdk-gdm.xml  mdk-kde-nolist.xml  mdk-kde.xml
eazel-engine/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  eazel-engine.spec  eazel-engine.spec.in  gtkrc.in  make-gtkrc.pl  test.c
eazel-engine/Crux/: Makefile.in
eazel-engine/Crux/gtk/: Makefile.am  Makefile.in
eazel-engine/capplet/: Makefile.am  Makefile.in  eazel-engine-capplet.c  eazel-engine-properties.desktop
eazel-engine/data/: Makefile.in
eazel-engine/src/: Makefile.am  Makefile.in  eazel-theme-draw.c  eazel-theme-draw.c.dim  eazel-theme-gradient.c  eazel-theme-hacks.c  eazel-theme-main.c  eazel-theme-pixmaps.c  eazel-theme.h
faces/: root  tux.xpm  tuxbaby.xpm  tuxbox.xpm  tuxcoocker.xpm  tuxdad.xpm  tuxegg.xpm  tuxgirl.xpm  tuxhead1.xpm  tuxhead2.xpm  tuxmam.xpm  tuxmecano.xpm  user-brunette-mdk.xpm  user-curly-mdk.xpm  user-default-mdk.xpm  user-girl-mdk.xpm  user-hat-mdk.xpm  user-tie-mdk.xpm  user-woman-blond-mdk.xpm  utildame.xpm  utilmons.xpm
gnome/: DrakConf.desktop  Netscape.desktop  RpmDrake.desktop  gnome-Documentation-de.desktop  gnome-Documentation-en.desktop  gnome-Documentation-es.desktop  gnome-Documentation-fr.desktop  gnome-Documentation-it.desktop  gnome-Internet.desktop  gnome-mandrake-campus.desktop  gnome-mandrake-control-center.desktop  gnome-mandrake-expert.desktop  gnome-mandrake-news.desktop  gnome-mandrake-store.desktop  gnome-mandrakecampus.xpm  gnome-mandrakeexpert.xpm  gnome-mandrakenews.xpm  gnome-sofware-manager.desktop  gnomedesktop-network  mandrake.links.desktop.in  mandrake.links.sh
icons/: 3floppy_supermount.xpm  5floppy_supermount.xpm  DrakConf.xpm  applnk.xpm  cdrom_supermount.xpm  cdwriter_supermount.xpm  clavierq.xpm  doc-mdk.xpm  gimp.xpm  gnome.xpm  icq.xpm  kde.xpm  linuxconf.xpm  magic.xpm  magneto-optical_supermount.xpm  mandrake-logo-48.xpm  mandrake-logo-64.xpm  mandrake-logo-mini.xpm  mandrake-logo.xpm  mandrake-store.xpm  mandrakeexpert.xpm  maxwell.xpm  mdk-doc.xpm  mdk-updates.xpm  netscape.xpm  news-mdk.xpm  package2.xpm  rpmdrake.xpm  updates-mdk.xpm  user-brunette-mdk.xpm  user-curly-mdk.xpm  user-hat-mdk.xpm  user-woman-blond-mdk.xpm  util-brunette.xpm  util-default.xpm  util-girl.xpm  util-tie.xpm  x11amp.xpm  xkill-mdk.xpm  zip_supermount.xpm
kdelnk/: Cd-Rom.kdelnk  Doc.kdelnk  DrakConf.kdelnk  Gimp.kdelnk  Home.kdelnk  Home.kdelnk.in  Internet.kdelnk  Internet.kdelnk.in  KAppFinder.kdelnk  Kppp.kdelnk  Netscape.kdelnk  News.kdelnk  Printer.kdelnk  Printer.kdelnk.in  RpmDrake.kdelnk  Updates.kdelnk  Updates.kdelnk.in  XKill.kdelnk  floppy.kdelnk
krootwarning/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  configure.in.in  krootwarning.kdevprj  krootwarning.kdevses  krootwarning.lsm  subdirs
krootwarning/krootwarning/: Makefile.am  Makefile.in  krootwarning.cpp  krootwarning.desktop  krootwarning.h  krootwarningrc  main.cpp
krootwarning/krootwarning/pics/: Makefile.am  Makefile.in
krozat/: AUTHORS  Makefile  Makefile.am  Makefile.in  config.cache  config.h  config.status  configure  configure.in  configure.in.in  krozat.kdevprj  krozat.lsm  libtool  subdirs
krozat/krozat/: Krozat.desktop  Makefile  Makefile.am  Makefile.am~  Makefile.in  krozat.cpp  krozat.cpp~  krozat.h  krozat.kss  krozat.moc  krozat_kss_meta_unload.cpp
krozat/krozat/pics/: Makefile  Makefile.am  Makefile.in
menu/: applications-discovery.menu  applications-mdk.menu  applications.menu.in  defaultlayout-simplified.menu  defaultlayout.menu  desktop-common-data  make-session.filter  make-session.script  mandrake_desk  mandriva-discovery.menu  menu  menu-simplified  menustyle.csh  menustyle.sh  translate_menus  translate_menus-simplified  update-menus  update-menus.filter  xdg_menu
old/: CD-ROM  CD-ROM.noext.kdelnk.in  Device  Device.noext.kdelnk.in  Doc.kdelnk  Doc.kdelnk.in  Dos_C.kdelnk  DrakConf.kdelnk  DrakConf.kdelnk.in  Floppy  Floppy.noext.kdelnk.in  Ftpurl  Ftpurl.noext.kdelnk.in  Home.kdelnk  Hwiz.kdelnk  Internet.kdelnk  Linuxconf.kdelnk  MimeType  Netscape.kdelnk.in  News.kdelnk  News.kdelnk.in  Printer  Printer.kdelnk  Printer.noext.kdelnk.in  URL  Updates.kdelnk  WWWUrl  WWWUrl.noext.kdelnk.in  XKill.kdelnk  XKill.kdelnk.in  mandrake.links  mandrake.links.desktop.in  rpm.kdelnk
po/: POTFILES.in  af.po  ar.po  az.po  be.po  bg.po  br.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  ko.po  lt.po  lv.po  mandrake_desk.pot  mk.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  (+14 more)
sbin/: Xsession  chksession  convertsession  fndSession  kdeDesktopCleanup
sounds/: index.theme  moondrake-Sys-App-Error-Serious.oga  moondrake-Sys-List-End.oga  moondrake-Sys-Trash-Emptied.oga
special/: Gnome_and_X  Gnome_and_X.desktop  Gnome_and_X.desktop.in  README  mandrake-small.xpm
xinit.d/: desktop-directories  menu
(+251 files in other folders)
